fix: remove auto inserted external links

--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,12 @@
   margin: 20px auto;
   max-width: 500px;
 }
+a {
+  text-decoration: none;
+}
+
+a[href*="thelemonsqueezy"],
+a[href*="ezy.com"] {
+  display: none !important;
+}
 
